--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </main>
     <footer class="rodape">
         <div class="icons">
-            <a class="icons_A" href="https:/www.linkedin.com/layonel-londe/"><img class="icons-linke" src="assets/linkedin.svg"  alt="linkedin-logo"></a>
-            <a class="icons_A" href="https://www.instagram.com//?hl=bg"><img class="icons-linke" src="assets/github.svg"  alt="git-logo"></a>
-            <a class="icons_A" href="https://github.com/Layonel-londe"><img class="icons-linke" src="assets/instagram.svg"  alt="instagram-logo"></a>
+            <a class="icons_A" href="https://www.linkedin.com/in/layonel-londe/"><img class="icons-linke" src="assets/linkedin.svg"  alt="linkedin-logo"></a>
+            <a class="icons_A" href="https://www.instagram.com//?hl=bg"><img class="icons-linke" src="assets/instagram.svg"  alt="git-logo"></a>
+            <a class="icons_A" href="https://github.com/Layonel-londe"><img class="icons-linke" src="assets/github.svg"  alt="instagram-logo"></a>
         </div>
         <h3 class="h3">Desenvolvido por Layonel Londe Bonente</h3>
     </footer>
